@startuml

package "App" {
  class GUIAPP {
    - PoliceDAO policeDAO
    - VehicleDAO vehicleDAO
    - Consumer<Police> onLoginSuccess
    + GUIAPP()
    + setOnLoginSuccess(Consumer<Police>): void
    + main(String[]): void
  }
  class Main {
    + main(String[]): void
  }
}

package "dao" {
  class PoliceDAO {
    + payReportFees(int): boolean
    + getUnpaidReportIds(): List<Integer>
    + getReportsByPersonId(int): List<Report>
  }
  class VehicleDAO {
    + findByPlateNumber(String): List<Vehicle>
  }
  class DatabaseConnection {
    + getConnection(): Connection
  }
}

package "resources" {
  file DataBase.sql
}

class Report {
  - int reportId
  - int policeId
  - int driverId
  - int vehicleId
  - String violationType
  - String status
  - boolean isPaid
  + isPaid(): boolean
}

class Vehicle {
  - int vehicleId
  - String plateNumber
  - String type
  - String make
  - String model
  - int year
}

class Police {
  - int personId
  - String rank
  - String department
}

class Driver {
  - int personId
  - String licenseNumber
}

class Person {
  - int personId
  - String firstName
  - String lastName
  - String nationalId
}

Person <|-- Police
Person <|-- Driver
Vehicle <|-- Report
Police <|-- Report
Driver <|-- Report

@enduml
